--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,4 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    
+    <div class = "about">
+        <img class = "notfound" src="/images/404.png" alt="working">
+    </div>
 </body>
