--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,4 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    
+    <div class = "contact">
+        <img class = "notfound" src="/images/404.png" alt="working">
+
+    </div>
 </body>
