--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@ body{
 }
 .card:hover{
     .card-img-top{
-        opacity: 0.7;
+        opacity: 0.8;
     }
 }
 .fa-star{
@@ -250,11 +250,11 @@ body{
     padding : 2rem;
     width : 40%;
     margin: auto;
-    border: 0.1rem solid rgb(74, 73, 73);
+    /* border: 0.05rem solid rgb(74, 73, 73); */
     margin-bottom: 2rem;
     margin-top: 2rem;
     border-radius: 1rem;
-
+    box-shadow: 0rem 0.2rem 0.8rem grey;
 }
 .login-btn{
     display: flex;
@@ -317,11 +317,12 @@ body{
     align-items: center;
 }
 .user-links a{
-    font-size: 1.5rem;
-    margin-right : 1rem;
+    font-size: 1.6rem;
     text-decoration: none;
     color : black;
     font-weight: 500;
+    padding : 0.5rem;
+
 }
 .card-body .btn-primary{
     color : white;
@@ -331,4 +332,69 @@ body{
     justify-content: space-around;
     margin-top : 2rem;
 }
+.quizr{
+    padding : 0.8rem;
+    /* margin : 1rem; */
+    padding-left : 1rem;
+    padding-right : 1rem;
 
+    border: 0.05rem solid grey;
+    width : 25rem;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(109.6deg, rgb(229, 68, 121) 11.2%, rgb(157, 55, 206) 91.2%);
+    color : white;
+}
+
+.search{
+    background-color: #FFDD75;
+    padding : 0.5rem;
+    border-radius: 1rem;
+    height : 2.7rem;
+    width : 17rem;
+    border : none;
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom : 0.5rem;
+    margin-left : 1rem;
+    color : black;
+    font-weight: 500;
+    text-align: center;
+    margin-top : 2rem;
+
+    margin-left : 10rem;
+}
+.search::placeholder{
+    font-weight: 500;
+    color : black;
+
+}
+
+/*  */
+.notfound{
+    width: 70%;
+    margin: auto;
+    margin: 1rem;
+    text-align: center;
+}
+/*  */
+.card:hover{
+    box-shadow: 0rem 0.2rem 0.5rem grey;
+    border : none;
+}
+.active { 
+    /* text-decoration: overline red; */
+    color : red !important;
+}
+.nav-link.active i.fa-user {
+    color: #ff4500;
+}
+.user-links .fa-linkedin:hover{
+    color : #095f8d;
+
+}
+.user-links .fa-github:hover{
+    color :#8134AF;
+}
