--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,7 +2,7 @@
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-github"></i>
             <i class="fa-brands fa-square-whatsapp"></i>
         </div>
         <div class = "f-info-brand">&copy;EduX Private Limited</div>
