--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,12 +11,12 @@
     
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/courses">All courses</a>
-        <a class="nav-link" href="/about">About</a>
-        <a class="nav-link" href="/contact">Contact Us</a>
-        <a class="nav-link" href="/dashboard">Dashboard</a>
-        <a href="/login"><i class="fa-solid fa-user"></i></a>
+        <a class="nav-link active" href="/" id = "home">Home</a>
+        <a class="nav-link active" href="/courses">All courses</a>
+        <a class="nav-link active" href="/about">About</a>
+        <a class="nav-link active" href="/contact">Contact Us</a>
+        <a class="nav-link active" href="/dashboard">Dashboard</a>
+        <a class="nav-link active" href="/login"><i class="fa-solid fa-user"></i></a>
       </div>
     </div>
   </div>
