--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <body>
     <div class = "login-container">
-        <h2 style="text-align: center; margin-bottom:1rem;">Student Login</h2>
+        <h2 style="text-align: center; margin-bottom:1rem; text-decoration:overline red;">Student Login</h2>
         <form action = "/">
             <div class="mb-3">
                 <label for="fname" class="form-label">First Name</label>
