--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -4,7 +4,7 @@
     <div class="course-container">
         <img src="<%=course.image%>" class="course-img" alt="image">
         <h5 class="card-title"><%=course.title%></h5>
-        <p class="card-text">Tutor : <a href="https://www.youtube.com/@KunalKushwaha" class="tutor"><%=course.tutor%></a><br><i class="fa-solid fa-star"></i> <%=course.rating%></p>
+        <p class="card-text">Tutor : <a href="<%=course.tutorlink%>" class="tutor"><%=course.tutor%></a><br><i class="fa-solid fa-star"></i> <%=course.rating%></p>
         <button type="button" class="btn btn-success">Enroll Now</button>
         <hr>
         <div class="syllabus">
