--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <body>
     <div class = "login-container">
         <h2 style="text-align: center; margin-bottom:1rem; text-decoration:overline red;">Student Login</h2>
-        <form action = "/">
+        <form action = "/dashboard">
             <div class="mb-3">
                 <label for="fname" class="form-label">First Name</label>
                 <input type="text" class="form-control" id="fname" placeholder="Enter first name" required>
