EduX Notes-Updates

--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -40,7 +40,7 @@
                         <br>
                         <div class="notes-btns">
                             <button type="submit" class="btn btn-success">Save Notes</button>
-                            <button type="button" class="btn btn-danger" id="download-pdf-btn"><i class="fa-solid fa-download" style="margin-right: 0.3rem;"></i> PDF</button>
+                            <button type="button" class="btn btn-danger download-pdf-btn"><i class="fa-solid fa-download" style="margin-right: 0.3rem;"></i> PDF</button>
                         </div>
                     </div>
                     <%}%>
@@ -53,30 +53,7 @@
     </div>
     <br>
     <br>
-
     <!-- Include jsPDF and html2canvas from CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-<script>
-    // Function to download notes as PDF
-    document.getElementById('download-pdf-btn').addEventListener('click', function() {
-        const notesText = document.querySelector('.notedown').value; // Get the notes text
-
-        // jsPDF instance
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
-
-        // Set the title for the PDF
-        doc.setFontSize(16);
-        doc.text('Your Notes', 10, 10);  // Title of the PDF
-
-        // Add the notes text
-        doc.setFontSize(12);
-        doc.text(notesText, 10, 20);  // Notes content
-
-        // Save the generated PDF
-        doc.save('notes.pdf');
-    });
-</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
