--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,7 +1,28 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <div class = "contact">
-        <img class = "notfound" src="/images/404.png" alt="working">
-
-    </div>
+    <form action="/contact">
+        <div class = "connect">
+            <div class = "contact">
+                <h2 style="text-decoration: overline red;">Contact Us</h2>
+                <div class = "contact-div">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Enter name" name = "cname" required>
+                        <label for="floatingInput">Enter Your Name</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name = "cemail" required>
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-text">Message</span>
+                        <textarea class="form-control" aria-label="With textarea" placeholder="Message here..!" name = "cmsg" required></textarea>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary" style="width: 50%;">Submit</button>
+            </div>
+            <div class = "contact-img">
+                <img src="https://media.istockphoto.com/id/1290300704/vector/man-in-call-center-support-customer-support-answering-questions.jpg?s=612x612&w=0&k=20&c=ybVXSP9FUI8j4coZGtUbO363vWf4eqn9PwmjHT6uu4w=" alt="contact-img">
+            </div>
+        </div>
+    </form>    
 </body>
