--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <form action="/contact">
+    <form action="/contact" method="POST">
         <div class = "connect">
             <div class = "contact">
                 <h2 style="text-decoration: overline red;">Contact Us</h2>
