--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,10 +13,9 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="/" id = "home">Home</a>
         <a class="nav-link active" href="/courses">All courses</a>
-        <a class="nav-link active" href="/about">About</a>
-        <a class="nav-link active" href="/contact">Contact Us</a>
         <a class="nav-link active" href="/dashboard">Dashboard</a>
-        <a class="nav-link active" href="/login"><i class="fa-solid fa-user"></i></a>
+        <a class="nav-link active" href="/contact">Contact Us</a>
+        <a class="nav-link active getUser"><i class="fa-solid fa-user"></i></a>
       </div>
     </div>
   </div>
