--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,18 +3,9 @@
     <div class = "login-container">
         <h2 style="text-align: center; margin-bottom:1rem; text-decoration:overline red;">Student Login</h2>
         <form action = "/dashboard">
-            <div class="mb-3">
-                <label for="fname" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="fname" placeholder="Enter first name" required>
-              </div>
-              <div class="mb-3">
-                <label for="lname" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="lname" placeholder="Enter last name">
-              </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
               </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
@@ -22,7 +13,7 @@
             </div>
             <div class = "login-btn">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="/">Skip Login</a>
+                <a href="/" class = "skipLogin">Skip Login</a>
             </div>
             
           </form>
