--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,13 +96,14 @@ body{
     text-align: center;
     padding: 1.5rem;
 }
-.container{
+.home-container,
+.course-container{
+    padding: 1rem;
+    margin : 1rem;
     margin-bottom: 4rem;
-    margin-top : 2rem;
     align-items: center;
     display: flex;
     justify-content: center;
-
 }
 .btn-primary{
     font-weight: 500;
@@ -116,7 +117,6 @@ body{
 .card{
     margin: auto;
     margin: 1rem;
-    /* height: 22rem; */
     margin-top : 0;
 }
 .card:hover{
@@ -139,10 +139,9 @@ body{
     font-size: 3rem;
     color :slateblue;
 }
-.course-container{
+.show-container{
     margin : 1rem;
     padding : 1rem;   
-    /* border: 0.2rem solid gray;  */
 }
 .course-img{
     height : 20rem;
@@ -450,4 +449,64 @@ body{
 }
 .userAccess a:hover{
     color :red;
+}
+.shows-container{
+    margin: 1rem;
+    padding: 1rem;
+    display: flex;
+    margin: auto;
+    justify-content:space-evenly;
+}
+.shows-chapters{
+    width: 30%;
+    padding: 1rem;
+    border-right: 0.1rem solid rgba(28, 27, 27, 0.5);
+}
+.shows-content{
+    padding: 1rem;
+    display: flexbox;
+    /* margin: auto; */
+}
+
+.shows-chapter-img{
+    /* width: 100%; */
+    width: 40rem;
+    height: 20rem;
+    border-radius: 1rem;
+}
+.shows-chapters p{
+    padding: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.shows-chapters p:hover{
+    background-color: rgba(65, 63, 63, 0.2);
+    border-radius: 1rem;
+}
+.lectures{
+    width: 40rem;
+}
+.chapter-notes{
+    border: 0.1rem solid grey;
+    border-radius: 1rem;
+    width: 100%;
+    height: 20rem;
+    padding : 1rem;
+    border-radius : 1rem;
+    background-color: #222222;
+    color : white;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 1.2rem;
+}
+.chapter-notes::placeholder{
+    color : white;
+}
+.active-chapter{
+    background-color: rgba(159, 200, 236, 0.3);
+    font-weight: bold;
+    color: #ff0000; 
+    border-radius: 1rem;
+}
+@media (max-width : 1000px){
+
 }
