--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -41,7 +41,7 @@
                                 </iframe>
                                 <br><br>
                                 <a href="/quiz/<%= course._id %>/<%= i %>" class="btn btn-primary">Quiz</a>
-                                <button type="button" class="btn btn-warning" id="shows-notes-btn">Notes</button>
+                                <button type="button" class="btn btn-warning shows-notes-btn">Notes</button>
                             </div>
                             <hr>
                             <div class="shows-chapter-notes">
@@ -49,6 +49,12 @@
                                 <div class="notes-btns">
                                     <button type="submit" class="btn btn-success">Save Notes</button>
                                     <button type="button" class="btn btn-danger download-pdf-btns"><i class="fa-solid fa-download" style="margin-right: 0.3rem;"></i> PDF</button>
+                                </div>
+                                <hr>
+                            </div>
+                            <div class="shows-chapter-quiz">
+                                <div class="chapter-quiz">
+                                    
                                 </div>
                             </div>
                         </div>
