--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,7 +465,6 @@ body{
 .shows-content{
     padding: 1rem;
     display: flexbox;
-    /* margin: auto; */
 }
 
 .shows-chapter-img{
@@ -504,8 +503,13 @@ body{
 .active-chapter{
     background-color: rgba(159, 200, 236, 0.3);
     font-weight: bold;
-    color: #ff0000; 
+    /* color: #ff0000;  */
     border-radius: 1rem;
+    border: none;
+    box-shadow: 0rem 0rem 0.2rem rgba(0, 0, 0, 0.3);
+}
+.shows-chapter-notes{
+    display: none;
 }
 @media (max-width : 1000px){
 
