--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,8 @@
-body{
-    height: 100%;
-    overflow: auto;
-}
 
 .navbar{
     height : 5rem;
     background-color: white;
+
 }
 .fa-compass{
     color : #fe424d;
@@ -14,7 +11,6 @@ body{
 .nav-link{
     color : #222222 !important;
     font-weight: 500 !important;
-    margin-right : 2rem;
 }
 .nav-link:hover{
     color : red !important;
@@ -56,15 +52,21 @@ body{
 .navbar-brand{
     display: flex;
     width: 30%;
+    align-items: center;
 }
-
+.navbar-nav{
+    width : 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
+}
 .f-info{
     position:relative;
     bottom:0px;
     width:100%;
 }
 .navbar-collapse.show {
-    background-color: #f8f9fa; /* Change to the desired color */
+    background-color: #f8f9fa; 
 }
 
 .form-control{
@@ -238,13 +240,7 @@ body{
 .fa-user:hover{
     color : red;
 }
-.navbar-nav{
-    width : 100%;
-    display: flex;
-    align-items: center;
-    right : 1rem !important;
-    justify-content:right;
-}
+
 .login-container{
     padding : 2rem;
     width : 40%;
