--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,52 @@
 <% layout("/layouts/boilerplate") %>
 <body>
+    <div class="home-page">
+        <h2 class="home-heading">Welcome To EduX</h2>
+        <p>Centralized Smart E-learning Platform</p>
+    </div>
+
+    <h4 class="home-text">Explore Our Featured Courses</h4>
+
+    <div class="home-container">
+        <% if (courses.length > 0) { %>
+            <% for (let course of courses) { %>
+                <div class="card" style="width: 18rem;">
+                    <img 
+                        src="<%= course.image || '/images/default-course.jpg' %>" 
+                        class="card-img-top" 
+                        alt="<%= course.title %> image"
+                    >
+                    <div class="card-body">
+                        <h5 class="card-title"><%= course.title %></h5>
+                        <p class="card-text">
+                            Tutor: 
+                            <% if (course.tutorlink) { %>
+                                <a href="<%= course.tutorlink %>" class="tutor" target="_blank" rel="noopener noreferrer">
+                                    <%= course.tutor %>
+                                </a>
+                            <% } else { %>
+                                <%= course.tutor %>
+                            <% } %>
+                            <br>
+                            <i class="fa-solid fa-star"></i> <%= course.rating %> / 5
+                        </p>
+                        <a href="/shows/<%= course._id %>" class="btn btn-primary">Explore</a>
+                    </div>
+                </div>
+            <% } %>
+        <% } else { %>
+            <p class="no-courses-message">No courses available at the moment. Please check back later!</p>
+        <% } %>
+    </div>
+
+    <%- include("../includes/footer.ejs") %>
+</body>
+
+
+
+
+<!-- <% layout("/layouts/boilerplate") %>
+<body>
     <div class = "home-page">
         <h2 class = "home-heading">Welcome To EduX</h2>
         <p>Centralized Smart E-learning Platform</p>
@@ -18,4 +65,4 @@
       <%}%>
     </div>
     <%-include("../includes/footer.ejs")%>
-</body>
+</body> -->
