--- a/views/pages/quiz.ejs
+++ b/views/pages/quiz.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <div class="quizdiv">
+    <div class="quizdiv mt-5">
         <h3>Quiz for <%= chapter.chapter %></h3>
         <hr>
     
